Keep expanded state of unit containers on updates and fix some CSS related "jumping"

--- a/coceso-components/src/styles.scss
+++ b/coceso-components/src/styles.scss
@@ -94,4 +94,10 @@
     border-bottom-left-radius: initial !important;
     border-bottom-right-radius: initial !important;
   }
+
+  // Remove margin transition from first children, leads to some jumping on data updates
+  > .mat-expansion-panel-spacing:first-child,
+  > *:first-child:not(.mat-expansion-panel) .mat-expansion-panel-spacing {
+    transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
